# machine_learning_example

./: CMakeLists.txt
include/: nn.h
src/: adder.c  dump_nn.c  gates.c  main.c  nn.c  raylib_nn.c  xor.c
